--- a/app/src/main/res/layout/sub_list_layout.xml
+++ b/app/src/main/res/layout/sub_list_layout.xml
@@ -3,88 +3,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:layout_editor_absoluteY="81dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginTop="4dp"
+        android:elevation="8dp"
+        android:visibility="visible"
+        app:cardElevation="8dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="78dp">
 
-        <TextView
-            android:id="@+id/subName"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:text="@string/subscription"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textStyle="bold" />
+            android:layout_height="52dp">
 
-        <TextView
-            android:id="@+id/subDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/cardView"
-            android:layout_below="@+id/cardView"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/date" />
+            <TextView
+                android:id="@+id/subDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="2dp"
+                android:text="@string/date"
+                android:textAlignment="textEnd"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/subDateValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="false"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/_2018_01_17"
-            android:textAlignment="textStart"
-            android:visibility="visible" />
+            <TextView
+                android:id="@+id/subName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="2dp"
+                android:layout_toStartOf="@+id/subDate"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:text="@string/subscription"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/subCharge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/cardView"
-            android:layout_below="@+id/cardView"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="50dp"
-            android:text="@string/monthly_charge" />
+            <TextView
+                android:id="@+id/subCharge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/subDate"
+                android:layout_marginRight="2dp"
+                android:text="@string/monthly_charge"
+                android:textAlignment="textEnd"
+                android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/subChargeValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="false"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="50dp"
-            android:text="@string/_00_00"
-            android:textAlignment="textStart"
-            android:visibility="visible" />
+            <TextView
+                android:id="@+id/subComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/subName"
+                android:layout_marginLeft="2dp"
+                android:layout_toStartOf="@+id/subCharge"
+                android:gravity="center_vertical"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:text="@string/comment"
+                android:textSize="14sp"
+                android:textStyle="italic" />
 
-        <TextView
-            android:id="@+id/subComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/cardView"
-            android:layout_below="@+id/cardView"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="70dp"
-            android:text="@string/comment" />
-
-        <TextView
-            android:id="@+id/subCommentValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="false"
-            android:layout_marginStart="83dp"
-            android:layout_marginTop="70dp"
-            android:text="@string/cccccccccccccccccccccccccccccc"
-            android:textAlignment="textStart"
-            android:visibility="visible" />
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
