--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="0.466" />
 
     <Button
-        android:id="@+id/DeleteSub"
+        android:id="@+id/btnSaveSub"
         style="@android:style/Widget.Button"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/delete"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/EditSub"
         app:layout_constraintStart_toEndOf="@+id/btnAddSub"
